# lumix-upnp-dump

./: .gitignore  Makefile  Pipfile  README.md  flake.nix  lumix_upnp_dump.py  pyproject.toml  test_what_was_downloaded.py
lumix_upnp_dump/: __main__.py  more_argparse.py
mypy_stubs/upnpclient/: __init__.pyi  soap.pyi
