[tool.poetry]
name = "lumix-upnp-dump"
version = "0.1.0"
description = "Program that dumps media from Lumix cameras on the network, removing them from device."
authors = ["Mikołaj Biel <lumix-upnp-dump@mbiel.pl>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/klausweiss/lumix-upnp-dump"
classifiers = [
	"Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
]

[tool.poetry.dependencies]
python = ">=3.10.10,<3.12"
upnpclient = "~=1.0.3"
python-didl-lite = "~=1.3.2"
requests = "~=2.31.0"
configargparse = "~=1.5.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "*"
isort = "*"
ruff = "*"
types-requests = "~=2.31.0"

[tool.poetry.scripts]
lumix-upnp-dump = "lumix_upnp_dump:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/mypy_stubs"

[[tool.mypy.overrides]]
module = [
	'configargparse'
]
ignore_missing_imports = true

