[project]
name = "lumix-upnp-dump"
version = "0.2.0"
description = "Program that dumps media from Lumix cameras on the network, removing them from device."
authors = [
    {name = "Mikołaj Biel", email = "lumix-upnp-dump@mbiel.pl"}
]
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10.10,<3.15"
classifiers = [
	"Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
]
dependencies = [
    "upnpclient~=1.0.3",
    "python-didl-lite~=1.4.1",
    "requests~=2.32.4",
    "configargparse~=1.7.1",
    "toml~=0.10.2",  # configargparse requires toml, but does not list it as a requirement
    "pillow~=12.0.0",
    "rawpy~=0.25.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "ruff",
    "types-requests~=2.32.4.20250913",
    "pytest>=9.0.1",
]

[project.scripts]
lumix-upnp-dump = "lumix_upnp_dump.__main__:main"

[project.urls]
Repository = "https://github.com/klausweiss/lumix-upnp-dump"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I"]  # Enable isort rules

[tool.ruff.lint.isort]
known-first-party = ["lumix_upnp_dump"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/mypy_stubs"

[[tool.mypy.overrides]]
module = [
	'configargparse'
]
ignore_missing_imports = true

